[package]
name = "event_feed"
version = "0.1.0"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"

description = "Event systems implemented using event feeds."

categories = ["rust-patterns", "concurrency"]
keywords = ["event_system", "event", "feed", "event_loop"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10"